--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,11 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@/*": ["src/*"]
+    },
+    "types": [
+      "vitest/globals"
+    ]
   }
 }
