--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
     "@vitest/coverage-v8": "^3.0.8",
+    "dotenv": "^16.4.7",
     "eslint": "^9.18.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-vitest-globals": "^1.5.0",
