--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.4.1",
     "@types/bcryptjs": "^2.4.6",
+    "@types/supertest": "^6.0.2",
     "bcryptjs": "^3.0.2",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "supertest": "^7.0.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
