--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.11.8",
     "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
     "@vitest/coverage-v8": "^3.0.8",
