--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 DATABASE_URL="postgresql://database:password@localhost:port/db_name?schema=public"
-JWT_PRIVATE_KEY=""
-JWT_PUBLIC_KEY=""
+JWT_PRIVATE_KEY="JWT_PRIVATE_KEY"
+JWT_PUBLIC_KEY="JWT_PUBLIC_KEY"
+CLOUDFLARE_ACCOUNT_ID="CLOUDFLARE_ACCOUNT_ID"
+AWS_BUCKET_NAME="AWS_BUCKET_NAME"
+AWS_ACCESS_KEY_ID="AWS_ACCESS_KEY_ID"
+AWS_SECRET_ACCESS_KEY="AWS_SECRET_ACCESS_KEY"
